--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <ul>
             <li><strong>Titulo secundario(polimodal):</strong> Colegio Fray Mamerto Esquiu</li>
             <li><strong>Titulo terceario(cheff):</strong> IGG instituto gastronomico argentino</li>
+            <li>Conocimientos basicos de html, css, javascript, phyton.</li>
         </ul>
     <h2>Idiomas</h2>
         <ul>
